integrating KotlinLab library